syntax = "proto3";

option java_package = "com.example.grpc";
option java_outer_classname = "PeerToPeerProto";

service PeerToPeer {
  //rpc GetServerHash(HelloRequest) returns (HelloReply);
  rpc Forward(ForwardRequest) returns (ForwardResponse);
}

message ForwardRequest {
    string key = 1;
    string value = 2;
}

message ForwardResponse {
    string message = 1;
}